fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
@@ -509,7 +509,6 @@ h5 span {
   .thought-bubble-img {
     left: 0;
   }
-
 }
 
 
